So many spelling fixes

--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -4,19 +4,19 @@
 BRA_major_industrial_strike:0 "Major Industrial Strike"
 BRA_major_industrial_strike_desc:0 "Major strikes nationwide threaten our economy and hold the nation at ransom. How will the government react?"
 BRA_state_farms:0 "State-Owned Farms"
-BRA_state_farms_desc:0 "True to the teachings of Marxism, the farms of Brazil are owned by the state, with farmers enjoying better statuses as landowners have been removed from the hierachy."
+BRA_state_farms_desc:0 "True to the teachings of Marxism, the farms of Brazil are owned by the state, with farmers enjoying better statuses as landowners have been removed from the hierarchy."
 BRA_cooperatives:0 "Peasant-Headed Cooperatives and Limited Private Initiative"
-BRA_cooperatives_desc:0 "True to the teachings of Syndicalism, peasants have organized into cooperatives to run the farmlands of Brazil, allowing them some initiative while fully respecting the rights of the workers."
+BRA_cooperatives_desc:0 "True to the teachings of Syndicalism, peasants have organised into cooperatives to run the farmlands of Brazil, allowing them some initiative while fully respecting the rights of the workers."
 BRA_brazilian_socialism_idea:0 "Brazilian Socialism"
 BRA_brazilian_socialism_idea_desc:0 "Brazilian Socialism is not just Socialism in Brazil. Rich of the culture and history of our land, Brazilian Socialism is made by Brazilians, for Brazilians, putting our country before ideology."
 BRA_mixed_capital_ventures:0 "Mixed-Capital Ventures"
 BRA_mixed_capital_ventures_desc:0 "With judicious and targeted intervention from the state, private enterprise can be steered to ensure that the needs of the Brazilian people are always met, without compromising entrepeneurship."
 BRA_laissez_faire_economy:0 "Laissez-Faire Economy"
-BRA_laissez_faire_economy_desc:0 "Some may criticize the 'invisible hand' of the market, but we still firmly believe that the economy can regulate itself. Only through serving the Brazilian people does it prosper, and any intervention is misguided at best."
+BRA_laissez_faire_economy_desc:0 "Some may criticise the 'invisible hand' of the market, but we still firmly believe that the economy can regulate itself. Only through serving the Brazilian people does it prosper, and any intervention is misguided at best."
 BRA_nationalized_economy:0 "Nationalised Economy"
 BRA_nationalized_economy_desc:0 "A safe and secure economy is a state economy. Brazilians will no longer be at the whims of industrialists and landowners, as the state will now see to every part of the economy, or put entrusted directors in charge."
 BRA_land_reform:0 "Land Reform Enacted"
-BRA_land_reform_desc:0 "We have finally went through with some well-needed land reforms. A fastidious and often criticized task, but one that is needed to keep our economy and agriculture afloat."
+BRA_land_reform_desc:0 "We have finally went through with some well-needed land reforms. A fastidious and often criticised task, but one that is needed to keep our economy and agriculture afloat."
 BRA_beat_arg:0 "Broke La Plata"
 BRA_war_reparations:0 "War Reparations from Argentina"
 BRA_war_reparations_desc:0 "Brazil crushed Argentina and her lackeys in the Great War, and now they will pay for each Brazilian life they stole in both wars. Olho por olho, dente por dente"
@@ -58,25 +58,25 @@ BRA_joint_ventures_desc:0 "By establishing joint ventures with our private secto
 BRA_heavy_intervencionism:0 "Heavy-Handed Interventionism"
 BRA_heavy_intervencionism_desc:0 "Sometimes, even the 'invisible hand' needs a good nudge in the right direction. This is one of those times, the state must take greater reign over the economy!"
 BRA_infrastructure_effort:0 "National Infrastructure Plan"
-BRA_infrastructure_effort_desc:0 "With our industry well on its way to recovery, we should focus on another great issue we face. Our factories are isolated, and our goods and people are only linked by cobblestone roads and dilapidated railways. We must plan a modern infrastucture grid, with asphalt roads and renovated railways."
+BRA_infrastructure_effort_desc:0 "With our industry well on its way to recovery, we should focus on another great issue we face. Our factories are isolated, and our goods and people are only linked by cobblestone roads and dilapidated railways. We must plan a modern infrastructure grid, with asphalt roads and renovated railways."
 BRA_taming_jungle:0 "Taming the Jungle"
 BRA_taming_jungle_desc:0 "Constructing a railway across the Amazon Jungle linking Manaus and other cities of the Amazonas to the rest of the nation has always been an ambition of Brazil. Now more than never, we must attempt to make a breakthrough in this titanic infrastructure project."
 BRA_industrialization:0 "Urban Industrialisation"
-BRA_industrialization_desc:0 "Belo Horizonte, Goiania and many other cities in the interior of the country have for too long been neglected. Let us give them the development they deserve and turn them into thriving population centers and economical hubs."
+BRA_industrialization_desc:0 "Belo Horizonte, Goiania and many other cities in the interior of the country have for too long been neglected. Let us give them the development they deserve and turn them into thriving population centres and economical hubs."
 BRA_paulista_metropolis:0 "The Paulista Metropolis"
 BRA_paulista_metropolis_desc:0 "Investing in the municipality of Paulista and granting it a direct connection to Rio will rapidly pay economic dividends. Linking our coastline in this way will also help us dynamise our industrial and research sectors."
 BRA_sertao:0 "Taming the Sertão"
 BRA_sertao_desc:0 "Vast dry lands, poor and weary villagers, small towns and the scorching midday sun. A stark reminder of a time when Brazil was almost antonymous with progress. Properly connected to the rest of the country via rail and road, time alone will quickly prove the end to this anachronistic scenery."
 BRA_state_owned:0 "Confiscate Lands from the Bourgeoisie"
-BRA_state_owned_desc:0 "Confiscating all land and setting up state-owned farms all over southern Brazil will allow us to minimize corruption and mismanagement from local landowners and will empoyer the common Brazilian farmer."
+BRA_state_owned_desc:0 "Confiscating all land and setting up state-owned farms all over southern Brazil will allow us to minimise corruption and mismanagement from local landowners and will empower the common Brazilian farmer."
 BRA_land_cooperatives:0 "Agricultural Cooperatives"
-BRA_land_cooperatives_desc:0 "In the spirit of European Syndicalism, let us have all arable land be organized by peasant-headed cooperatives in southern Brazil. They will surely be the capable of dealing with these lands."
+BRA_land_cooperatives_desc:0 "In the spirit of European Syndicalism, let us have all arable land be organised by peasant-headed cooperatives in southern Brazil. They will surely be the capable of dealing with these lands."
 BRA_coronel:0 "Deal with the Coronéis"
 BRA_coronel_desc:0 "Forever a force against progress, the Coronéis of the northeast will stop at nothing to retain their position of rulers of that region. It is time to remind them what a real central government is like!"
 BRA_loyal_coro:0 "Woo the Coronéis"
 BRA_loyal_coro_desc:0 "The Coronéis are simple men, albeit undeniably influential. They can easily be bought and influenced, and their loyalty is very valuable to us."
 BRA_defang_coro:0 "Defang the Coronéis"
-BRA_defang_coro_desc:0 "A systematic confiscation of the lands and property of the Coronéis in the northeast will begin immediately. These kleptocrats will no longer injustly reign over millions of Brazilians!"
+BRA_defang_coro_desc:0 "A systematic confiscation of the lands and property of the Coronéis in the northeast will begin immediately. These kleptocrats will no longer unjustly reign over millions of Brazilians!"
 BRA_reorganize_northeast:0 "North-Eastern Reorganisation"
 BRA_reorganize_northeast_desc:0 "Free from the Coronéis, the northeast of Brazil will have to be pulled out of the colonial era and into the 20th century. It will take a considerable effort, but a new, thriving industrial base in the northeast will be invaluable in times of war."
 BRA_social_pact:0 "Pacto Social"
@@ -118,7 +118,7 @@ BRA_coastal_fort_desc:0 "Fortifications in key points in the most important port
 BRA_archipelago:0 "Bridging the Brazilian Archipelago"
 BRA_archipelago_desc:0 "To many of our military analysts and theorists, Brazil is akin to an archipelago, with cities and major centres being its islands. This can greatly hinder our reaction speed to an invasion, but this may also help against invasions in the near future. Let us establish a series of radio stations so that our army can always be ready to react!"
 BRA_support:0 "Support Equipment Effort"
-BRA_support_desc:0 "An army is made of more than guns and uniforms. Medics, engineers, officers and scouts are of vital importance, but their effectiveness is hindered by our sheer lack of specialized equipment. We must remedy to that."
+BRA_support_desc:0 "An army is made of more than guns and uniforms. Medics, engineers, officers and scouts are of vital importance, but their effectiveness is hindered by our sheer lack of specialised equipment. We must remedy to that."
 BRA_army_railways:0 "Military Railways"
 BRA_army_railways_desc:0 "One way to increase our mobilisation speed against foreign aggression from beyond the River Plate is to set up networks of railways that will only be used by the armed forces, or to transport resources vital to them. Naturally, the populace will understand that it is for the greater good of the nation."
 BRA_amphibious:0 "War Plan Ciano"
@@ -144,7 +144,7 @@ BRA_cas_desc:0 "The Army and the Air Force must work as one if we are to overcom
 BRA_aviacao_naval:0 "Escola de Aviação Naval"
 BRA_aviacao_naval_desc:0 "The School of Naval Aviation has been at disrepair, especially since the brutal humiliation of our military in the Platine War. We must renew and increase their funding, to ensure that the Platine fleet never even manage to raise anchor!"
 BRA_ENGESA:0 "Establish the ENGESA"
-BRA_ENGESA_desc:0 "Let us establish a special manufactory for motorized combat vehicles. Even if it is dwarfed in size and power by almost all similar companies in the world, the ENGESA will be of extreme help for our military and quickstart our development of motorised and mechanised divisions."
+BRA_ENGESA_desc:0 "Let us establish a special manufactory for motorised combat vehicles. Even if it is dwarfed in size and power by almost all similar companies in the world, the ENGESA will be of extreme help for our military and kick start our development of motorised and mechanised divisions."
 BRA_mecha:0 "A Mechanised Army"
 BRA_mecha_desc:0 "The concept of a fully mechanised army has been gaining strength in military circles. We can, with some help from our engineers, take the first steps towards a mechanised military by ensuring that our equipment and techniques are as up to date as possible."
 BRA_tamoio:0 "Project Tamoio"
