--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -17,7 +17,7 @@ part.11.a:0 "We have no choice."
 part.11.b:0 "We will never accept your proposal!"
 
 part.12.t:0 "The Second treaty of Brest-Litovsk."
-part.12.d:0 "The Government of the German Empire, seeing no other choice, accepted our offer. The humiliatition they brought upon us with the Brest-Litovsk treaty is now but a distant memory! In accordance with our agreement we are now giving the German provinces we conquered back to the German Empire."
+part.12.d:0 "The Government of the German Empire, seeing no other choice, accepted our offer. The humiliation they brought upon us with the Brest-Litovsk treaty is now but a distant memory! In accordance with our agreement we are now giving the German provinces we conquered back to the German Empire."
 part.12.a:0 "A small price for a great victory!"
 
 part.13.t:0 "The darkest hour of the German Empire"
@@ -29,10 +29,10 @@ part.14.d:0 "The new government in Berlin is firmly under our control and German
 part.14.a:0 "Pax Europa!"
 
 part.15.t:0 "The Kaiserliches Heer"
-part.15.d:0 "Form up the Active Defense!"
+part.15.d:0 "Form up the Active Defence!"
 part.15.a:0 "Form up the Troops!"
 
-part.16.t:0 "Choosing the new german Head of State."
+part.16.t:0 "Choosing the new German Head of State."
 part.16.d:0 "We have the opportunity to install a member of the house of Romanov as the new Emperor of Germany. It may, however, be wise to let the germans choose their own government."
 part.16.a:0 "Grand Duke Boris will be Wilhelm V!"
 part.16.b:0 "Let the Germans decide, as long as they stay loyal."
@@ -67,7 +67,7 @@ part.23.d:0 "The Russian Empire has imposed Grand Duke Boris as the new King of 
 part.23.a:0 "Long live Wilhelm V!"
 
 part.24.t:0 "The darkest hour of the German Empire"
-part.24.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters in Asia with Japan. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Japaneese empire is the transfer of all our remaining territories in Asia to them."
+part.24.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters in Asia with Japan. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Japanese empire is the transfer of all our remaining territories in Asia to them."
 part.24.a:0 "Capitulate."
 
 part.25.t:0 "The Darkest Hour of the German Empire"
