--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1221,8 +1221,8 @@ POL_social_democrat_party:0 "Free Polish Party"
 POL_social_democrat_party_long:0 "The Free Polish Party"
 POL_social_liberal_party:0 "People's Coalition"
 POL_social_liberal_party_long:0 "The People's Coalition"
-POL_market_liberal_party:0 "Democartic Party"
-POL_market_liberal_party_long:0 "The Democartic Party"
+POL_market_liberal_party:0 "Democratic Party"
+POL_market_liberal_party_long:0 "The Democratic Party"
 POL_social_conservative_party:0 "Patriotic Party"
 POL_social_conservative_party_long:0 "The Patriotic Party"
 POL_authoritarian_democrat_party:0 "Monarchist Party"
