Add more meat to some NFs, fix some typos

--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -36,7 +36,7 @@ BRA_MON_party_long:0 "Coalizão Integralista Imperial Brasileira"
 
 ### Foci ###
 BRA_black_monday:0 "Lessons of Black Monday"
-BRA_black_monday_desc:0 "The chaos in our country in the aftermath of Black Monday shook the already weakened economy to its very core. It is time for s to start a reorganisation effort for our economy."
+BRA_black_monday_desc:0 "The chaos in our country in the aftermath of the Black Monday shook our already weakened economy to its very core. It is time for us to start a reorganisation effort for our economy."
 BRA_industrial_recovery:0 "Industrial Recovery"
 BRA_industrial_recovery_desc:0 "Our industry is still far from recovery, but it can be steered to back to its place, with a light nudge and a few well-measured financial grants, of course."
 BRA_land_reform_effort:0 "Enact Land Reforms"
@@ -132,7 +132,7 @@ BRA_CSI_desc:0 "The Compania Siderugica Nacional will grant us with much need st
 BRA_paratroop:0 "Establish Paratrooper Corps"
 BRA_paratroop_desc:0 "In order to avoid another costly stalemate beyond the River Plate, we must ensure that we are capable of dropping specially trained troops behind the main Argentine front to disrupt their supply and communication lines. The strategic potential  of this new kind of air warfare cannot be underestimated."
 BRA_logistics:0 "Military Information Management"
-BRA_logistics_desc:0 "We need a more efficient way to gather long range intelligence than scouts with binoculars, an a more efficient way to process this information than miles of paper than can be easily read by the enemy. Luckily, breakthroughs in electronics could fit our needs."
+BRA_logistics_desc:0 "We need a more efficient way to gather long range intelligence than scouts with binoculars, and a more efficient way to process this information than miles of paper than can be easily read by the enemy. Luckily, recent breakthroughs in electronics could fit our needs."
 BRA_FAB:0 "Establish the FAB"
 BRA_FAB_desc:0 "The Brazilian Air Force, or FAB, must be organised as a single, centralised command structure in order to keep the skies of Brazil safe and under her control."
 BRA_fighter:0 "Fighter Focus"
@@ -142,9 +142,9 @@ BRA_bomber_desc:0 "The most important aspect of aerial combat is to damage targe
 BRA_cas:0 "CAS Effort"
 BRA_cas_desc:0 "The Army and the Air Force must work as one if we are to overcome the challenges ahead for Brazil. Fund and train especial bombers that will bring death to our enemies from very close"
 BRA_aviacao_naval:0 "Escola de Aviação Naval"
-BRA_aviacao_naval_desc:0 "The School of Naval Aviation has been at disrepair, especially since the brutal humiliation of our military in the Platine War. We must renew and increase their funding, to ensure that the Platine fleet never even manage to raise anchor!"
+BRA_aviacao_naval_desc:0 "The School of Naval Aviation has been in disrepair, especially since the brutal humiliation of our military in the Platine War. We must renew and increase their funding, to ensure that the Platine fleet never even manage to raise anchor!"
 BRA_ENGESA:0 "Establish the ENGESA"
-BRA_ENGESA_desc:0 "Let us establish a special manufactory for motorized combat vehicles. Even if it is dwarfed in size and power by almost all similar companies in the world, the ENGESA will be of extreme help for our military and quickstart our development of motorised and mechanised divisions."
+BRA_ENGESA_desc:0 "Let us establish a special manufactory for motorized combat vehicles. Even if it is dwarfed in size and power by almost all similar companies in the world, the ENGESA will be of extreme help for our military and will help quickstart our development of motorised and mechanised divisions."
 BRA_mecha:0 "A Mechanised Army"
 BRA_mecha_desc:0 "The concept of a fully mechanised army has been gaining strength in military circles. We can, with some help from our engineers, take the first steps towards a mechanised military by ensuring that our equipment and techniques are as up to date as possible."
 BRA_tamoio:0 "Project Tamoio"
@@ -176,7 +176,7 @@ BRA_faith_and_state_desc:0 "The pedantic idea of the separation of Church and St
 BRA_church_support:0 "Clergy Support"
 BRA_church_support_desc:0 "The clergy now stands fully behind us and our efforts to make the nation everything that it is supposed to be. The new Brazil, with the blessing of Our Lady, will truly be one nation under God."
 BRA_patrianova:0 "The New Fatherland"
-BRA_patrianova_desc:0 "The Patrianova movement's momentum is irreversibly strong, for Brazilians of all races and classes know what truly matter, Country, Family and Unity above all else."
+BRA_patrianova_desc:0 "The Patrianova movement's momentum is irreversibly strong, for Brazilians of all races and classes know what truly matters, Country, Family and Unity above all else."
 BRA_government_streamlining:0 "Effective Centralisation"
 BRA_government_streamlining_desc:0 "Brazil is more than the sum of its parts. It's a nation whose God-given destiny is to prosper. We must have an effective, active central government if we are to see it done."
 BRA_anl:0 "ANL Revolution Continues"
@@ -208,15 +208,15 @@ BRA_father_of_the_poor_desc:0 "Getúlio won the civil war, for Brazilians know w
 BRA_new_state:0 "Estado Novo"
 BRA_new_state_desc:0 "The New State has cemented itself as the protector and guardian of Brazil. All Brazilians are expected to fulfil their duty so that Brazil shall emerge stronger than ever from these troubled times!"
 BRA_democracy:0 "Democracy Maintained"
-BRA_democracy_desc:0 "The Republic stood on the edge of the knife, and yet it survived! Truly fate was on our side, but we may not rest on providence alone.
+BRA_democracy_desc:0 "The Republic stood on the edge of the knife, and yet it survived! Truly fate was on our side, but we may not rest on providence alone. There is much work ahead of us to ensure that this tragedy does not happen again."
 BRA_national_guard:0 "Establish a new National Guard!"
 BRA_national_guard_desc:0 "The coup attempts and civil unrest make it clear that goodwill alone will not keep the Republic safe. Establishing and maintaining a national guard will be mostly symbolic, but it will be a useful way to incorporate the military in our national law enforcement."
 BRA_rule_of_law:0 "The Rule of Law Prevails"
-BRA_rule_of_law_desc:0 "Yes, these are uncertain times. But those who forfeit their liberty for safety deserve neither. Persecution is not what the Republic we fought for is about!"
+BRA_rule_of_law_desc:0 "Yes, these are uncertain times. But those who forfeit their liberty for safety deserve neither. Persecution is not what the Republic we fought for is about, now is not the time to succumb to these vices!"
 BRA_purge_dem:0 "Purge the Extremists"
-BRA_purge_dem_desc:0 "We must safeguard the Republic against those who dream day and night of seeing it fall, even if we must take exceptional measures to do so."
+BRA_purge_dem_desc:0 "We must safeguard the Republic against those who dream day and night of seeing it fall, even if we must take exceptional measures to do so. Principles come after the safety of our cherished Republic."
 BRA_intelectual_amnesty:0 "Intellectual Amnesty"
-BRA_intelectual_amnesty_desc:0 "Many intellectuals are known to have extremist ideological views. But it would be foolish to simply drive them away, when they can be useful to us."
+BRA_intelectual_amnesty_desc:0 "Many intellectuals are known to have extremist ideological views. But it would be foolish to simply drive them away, when they can be useful to us. Let us simply overlook any unfortunate statements or actions from their persons."
 BRA_new_constitution:0 "New Constitution"
 BRA_new_constitution_desc:0 "The reason the extremists were so successful is simple, our workers are deprived of even basic rights under the Constitution. Concessions are to be made to make sure the nation is united behind the Republic."
 BRA_desco:0 "Promote Bradesco"
@@ -224,7 +224,7 @@ BRA_desco_desc:0 "Amador Aguiar's Bradesco bank is growing rapidly and will soon
 BRA_revenge:0 "Revanche"
 BRA_revenge_desc:0 "Brazil is finally united in cause. Without traitors and defeatists in our army, victory is all but certain. It is now high time to put the Transplatine scum back in their place!"
 BRA_argenta_delenda:0 "Argentina Delenda Est"
-BRA_argenta_delenda_desc:0 "The Platine dogs have been defeated thoroughly. Now comes the time where Brazil reigns alone in South America."
+BRA_argenta_delenda_desc:0 "The Platine dogs have been defeated thoroughly. Now comes the time where Brazil reigns alone in South America. The sons and daughters of Brazil have been avenged, and we are finally victorious!"
 BRA_empire:0 "The Imperial Restoration"
 BRA_empire_desc:0 "The people of Brazil rejoice over our victory, and now the time has come to restore the Empire to its former glory. We simply need to reform parts of our administration to ensure that Brazil is the Empire that it is meant to be!"
 BRA_petropolis:0 "Crown Pedro Gastão"
@@ -234,21 +234,21 @@ BRA_vassouras_desc:0 "The Vassouras branch of the Imperial Family has always cla
 BRA_payback:0 "Heavy War Reparations"
 BRA_payback_desc:0 "All these years, Argentina exploited the territories it unlawfully occupied. Reparations are in order, and they will be of a magnitude well fit for the damage they have caused."
 BRA_my_vinas:0 "Seize the Malvinas"
-BRA_my_vinas_desc:0 "The Malvinas are a strategic position in the South Pacific, and with Argentina defeated they will be ours for the foreseeable future."
+BRA_my_vinas_desc:0 "The Malvinas are a strategic position in the South Pacific, and with Argentina defeated they will be ours for the foreseeable future. Let us ensure this much is clear to the local population."
 BRA_porto_osorio:0 "Found Porto Osório"
-BRA_porto_osorio_desc:0 "The capital of the Malvinas changed names many times, and once more time it shall. Porto Osorio will be the main base of the Brazilian Navy in the South Atlantic."
+BRA_porto_osorio_desc:0 "The capital of the Malvinas changed names many times, and once more time it shall. Porto Osorio will be the main base of the Brazilian Navy in the South Atlantic, and the new capital of the island."
 BRA_cisplatina:0 "Cisplatina"
-BRA_cisplatina_desc:0 "The province of Cisplatina is now back under our control. Let us end any pretence of autonomy for these traitors."
+BRA_cisplatina_desc:0 "The province of Cisplatina is now back under our control. Let us end any pretence of autonomy for these traitors. It is and always has been Brazilian territory!"
 BRA_guarani:0 "Guarany Territory"
-BRA_guarani_desc:0 "Paraguay will be reorganised into the Guarani Territory and annexed into our country as an unincorporated territory."
+BRA_guarani_desc:0 "Paraguay will be reorganised into the Guarani Territory and annexed into our country as an unincorporated territory. They will soon find themselves proud to be part of Brazil."
 BRA_under_guidance:0 "Government Under Guidance"
 BRA_under_guidance_desc:0 "The Argentine Government still acts as if it will just walk away from its crimes. It's time to tighten the leash and ensure they never threaten our country again."
 BRA_transplatina:0 "Transplatina"
-BRA_transplatina_desc:0 "Entre Rios is a natural a part of the Brazilian state, and Argentina is no longer in any position to contest this fact now!"
+BRA_transplatina_desc:0 "Entre Rios is a natural a part of the Brazilian state, and Argentina is no longer in any position to contest this fact now! Let us get the administrative formalities over with."
 BRA_spectre:0 "A Spectre is Haunting America"
-BRA_spectre_desc:0 "Workers of America, hear this! The Platine reactionaries are broken, but this is only the beginning of a great struggle."
+BRA_spectre_desc:0 "Workers of America, hear this! The Platine reactionaries are broken, but this is only the beginning of a great struggle. Many more in America plot our downfall, and we cannot let our guard down."
 BRA_free_gc:0 "Free Colombian Republics"
-BRA_free_gc_desc:0 "The three nations of Colombia are next in the crusade to free the workers of South America."
+BRA_free_gc_desc:0 "The three nations of Colombia are next in the crusade to free the workers of South America. The tyrants will fall all the way up to the Panama Canal!"
 BRA_free_per:0 "Free Peru"
 BRA_free_per_desc:0 "Peru is still under counter-revolutionary control. Crossing the Andes will be no small feat, but we must sacrifice our lives for the revolution."
 BRA_internacionalism:0 "International Revolution"
