More partition stuff and corrections of is_subject and is_subject_of stuff

--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -187,6 +187,26 @@ part.48.b:0 "Northern Schleswig is Danish!"
 
 part.2.d:0 "The German Empire is defeated! Our brave soldiers proudly march through Unter den Linden, displaying without doubt, that Soviet armed forces prevailed in mortal struggle against the German Empire! We now have to decide what to do with the lands of our enemies."
 
+part.49.t:0 "The Red Army Rises!"
+part.49.d:0 "Rise Kameraden!"
+part.49.a:0 "Form Up the Troops!"
+
+part.50.t:0 "The Commune of Bavaria"
+part.50.d:0 "...Nobody sees this..."
+part.50.a:0 "The Bavarian Monarchy is Abolished, its time for the Trade Unions to rule!"
+
+part.51.t:0 "The Commune of Prussia"
+part.51.d:0 "...Nobody sees this..."
+part.51.a:0 "Prussia will regain its virtues under the Red Flag!"
+
+part.52.t:0 "The Commune of Rhineland"
+part.52.d:0 "...Nobody sees this..."
+part.52.a:0 "Of course we're happy to be taking orders from abroad!"
+
+part.53.t:0 "The Commune of Northern Germany"
+part.53.d:0 "...Nobody sees this..."
+part.53.a:0 "Norddeutschland is Independent at Last!"
+
 part.3.t:0 "The Partitioning of Germany"
 part.3.d:0 "Our armies have defeated Germany, we now have to decide what to do with the lands of our former enemies!"
 part.3.a:0 "Split the country into Rhineland, North Germany, Bavaria and Prussia."
@@ -194,6 +214,36 @@ part.3.b:0 "Occupy the Rhineland, liberate the rest of Germany."
 part.3.c:0 "A new German Union!"
 part.3.e:0 "Move the border to the Rhine, create the German Union."
 part.3.f:0 "We can't trust the Germans, total occupation is preferable."
+
+part.54.t:0 "A loyal puppet in Munich"
+part.54.d:0 "The new government in Munich is firmly under our control and southern Germany is now a loyal member of the Internationale. Hopefully neither French nor Bavarian worker will spill their brothers' blood anymore."
+part.54.a:0 "Vive l'Internationale! Vive la liberté!"
+
+part.55.t:0 "A loyal puppet in Prussia"
+part.55.d:0 "The new government in Berlin is firmly under our control and northeast Germany is now a loyal member of the Internationale. Many Junker have found their just punishment in the people's court. May their bodies, now hanging from the trees and telegraph poles, be a warning to all reactionaries!"
+part.55.a:0 "Prussia shall threaten France no more!"
+
+part.56.t:0 "A loyal puppet in the Rhineland"
+part.56.d:0 "The new government in Essen is firmly under our control and west Germany is now a loyal member of the Internationale. The workers of the Ruhr can finally control their own destinies and enjoy the fruits of their labour!"
+part.56.a:0 "A new stronghold of Syndicalism! Vive l'Internationale!"
+
+part.57.t:0 "A loyal puppet in the Northern Germany"
+part.57.d:0 "The new government in Hamburg is firmly under our control and northern Germany is now a loyal member of the Internationale. The sailors, farmers, fishermen and shipyard workers are free from bourgeoise oppression!"
+part.57.a:0 "A new stronghold of Syndicalism! Vive l'Internationale!"
+
+part.58.t:0 "Thuringia"
+part.58.d:0 "The Prussians control the state of Thuringia, the geographical center of the German heartland. Prussia is the strongest of the new German Syndicalist states and if we were to claim it as our own we may be able to get French support."
+part.58.a:0 "Claim the State of Thuringia!"
+part.58.b:0 "Our resources are overstretched as it is."
+
+part.59.t:0 "Rhineland Claims Thuringia"
+part.59.d:0 "The Rhineland puppet government has claimed the state of Thuringia, a state controlled by the largest of the new German states, Prussia."
+part.59.a:0 "Force Prussia to cede Thuringia to Rhineland."
+part.59.b:0 "Who is drawing the map here!?"
+
+part.60.t:0 "The French support the Essen Government"
+part.60.d:0 "The bastards in Essen are trying to weaken us! They have claimed the state of Thuringia, which rightfully belongs to Prussia, as their own and they've even gotten Paris' support in the matter."
+part.60.a:0 "We'll cede the territory, but only because we have no choice."
 
 part.4.t:0 "The Partitioning of Britain"
 part.4.d:0 "After defeating the Union of Britain we now control Great Britain. We can partition these lands and create new countries with loyal governments."
@@ -232,3 +282,23 @@ occupy_rhine:0 "Occupation of the Rhineland"
 
 ### Factions ###
 russian_dominance:0 "Russian Sphere"
+
+### Opinion Modifiers ###
+GER_accept_deal_rus:0 "Accepted the Russian deal"
+GER_refuse_deal_rus1:0 "Refused the Russian deal"
+GER_refuse_deal_rus2:0 "Refused the Russian deal"
+chose_our_hos:0 "Chose our Head of State"
+let_us_choose_our_hos:0 "Let us choose our Head of State"
+SWI_gave_back_romandie:0 "Gave us Romandy back"
+SWI_not_gave_back_romandie:0 "Refused to hand us Romandy back"
+BEL_forced_eupen1:0 "Forced us to give out Eupen"
+BEL_forced_eupen2:0 "Forced us to give out Eupen"
+FRP_forced_alsace1:0 "Forced us to give out Alsace-Lorraine"
+FRP_forced_alsace2:0 "Forced us to give out Alsace-Lorraine"
+FRP_forced_alsace3:0 "Forced us to give out Alsace-Lorraine"
+GER_left_us_luxembourg:0 "Left us Luxemburg"
+GER_free_order_luxembourg:0 "Liberated Luxemburg"
+DEN_forced_schleswig1:0 "Forced us to give out Northern Schleswig"
+DEN_forced_schleswig2:0 "Forced us to give out Northern Schleswig"
+PSS_forced_thuringia1:0 "Forced us to give out Thuringia"
+PSS_forced_thuringia2:0 "Forced us to give out Thuringia"
