--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -99,3 +99,4 @@ LOADING_TIP_96:0 "When we want an airplane, we get an airplane, when we want an 
 LOADING_TIP_97:0 "Why do I hate the communists? These devils? They killed my son and burned my house...They must be burned at the stakes... \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_98:0 "We captured Moscow at the dawn. We won. But I don't feel joy and rapture. Because the Russians defeated the Russians. \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_99:0 "There is nothing under the sun that the Siamese police cannot do. \n- Phao Sriyanond"
+LOADING_TIP_100:0 "Give me a Japanese division armed with bamboo spears and I'll wipe out the entire Russian Far Eastern Army. \n- Sadao Araki"
