--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -320,17 +320,17 @@ UKR_Infantry1_desc:0 "The Ukrainian soldier should be well equipped, if we want 
 UKR_Doct1:0 "Foreign experience"
 UKR_Doct1_desc:0 "Lots of wars happened since the proclamation of our independence in 1918. Now is the time, when we have to rethink their lessons and results of these wars to understand the actual problems of our army and the possible methods, which can be used to improve it."
 UKR_Art1:0 "Artillery research"
-UKR_Art1_desc:0 "Artillery is very important for any modern army. We have to do everything possible to analyse the possibilities, which artillery can give to the Ukrainian army."
+UKR_Art1_desc:0 "Artillery is very important for any modern army. We have to do everything possible to analyze the possibilities, which artillery can give to the Ukrainian army."
 UKR_Massive:0 "Army of the peasants"
 UKR_Massive_desc:0 "Ukraine is one of the most populated countries in the Eastern Europe. We can use the children of the farmers on the battlegrounds of Europe, but at first we should understand, where they can bring more benefits for the country."
 UKR_Massive_inf1:0 "Equipment effort"
-UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms, that are handy in battle. They must be improved and sent to our soldiers as well as the new cheap, but multiple rifles and carbines."
+UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms, that are handy in battle. They must be improved and sent to our soldiers as well as the new cheap, but multiple rifles and carabines."
 UKR_Massive_inf2:0 "Arms for the army"
 UKR_Massive_inf2_desc:0 "We have already spent a lot of time to create the equipment for various purposes. But our army demand, that the equipment is still not perfect for the needs of the soldiers and officers."
 UKR_Massive_doct:0 "Idea for the soldiers"
 UKR_Massive_doct_desc:0 "We have many soldiers and many rifles. Someone can say that such an army is weaker than the army with the tanks and artillery, but we will definitely find out, how this army can be used at the struggle with our enemies."
-UKR_New_Army_UKR:0 "Army is reorganised"
-UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganised by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
+UKR_New_Army_UKR:0 "Army is reorganized"
+UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganized by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
 
 UKR_Newforpol:0 "New foreign policy"
 UKR_Newforpol_desc:0 "-"
