--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -356,7 +356,7 @@ BAT_Ger_Indep_desc:0 "The valley between Vaterland Germans and Baltic Germans wi
 BAT_Ger_Autonomy1:0 "Autonomy under the Germans"
 BAT_Ger_Autonomy1_desc:0 "It is time for us to reform. The conservatives within the Baltic Landtag want to turn the nation into a parliamentary monarchy and abandon the nigh-absolutist practices of Adolf Friedrich I. Should we listen?"
 BAT_Ger_Autonomy2:0 "Confronting the Kaiser"
-BAT_Ger_Autonomy2_desc:0 "The Vaterland is disappointed. To them, a strong parliamentary Baltic Duchy means a more autonomous and resistant Baltic Duchy. Our relations with the Kaiser have been lowered. It is time we finally confront the Kaiser instead of leaving the resolution of this conflict to chance."
+BAT_Ger_Autonomy2_desc:0 "The Vaterland is disappointed. To them, a strong parliamentary Baltic Duchy means a more autonomous and resistant Baltic Duchy. Our relations with the Kaiser have been damaged. It is time we finally confront the Kaiser instead of leaving the resolution of this conflict to chance."
 BAT_Ger_Autonomy3:0 "Centralise the Government"
 BAT_Ger_Autonomy3_desc:0 "The apparatus of the Ducal government is weak, rife with corruption and heavily decentralised, we must enact substantial governmental reforms before advancing forward, so that our country may prosper even without the help of the Kaiser."
 BAT_Ger_Autonomy4:0 "Break the Chains"
@@ -446,11 +446,11 @@ BAT_RUS_INT1_desc:0 "The vile Germans are no longer our masters. Russia has show
 BAT_RUS_INT2:0 "Baltic German Question"
 BAT_RUS_INT2_desc:0 "Baltic Germans always were a minority in our states, propped up by aggresive Germanisation policies from Berlin. Now that the Kaiser's hold on our country has been shattered, what should we do with them?"
 BAT_RUS_INT3:0 "Introduce Russian Language"
-BAT_RUS_INT3_desc:0 "Our Russian masters have encouraged us to embrace the Russian language as our only official language. This will take time and cause some issues, as all our official texts are currently in German or Baltic languages."
+BAT_RUS_INT3_desc:0 "Our Russian masters have encouraged us to embrace the Russian language as our only official language. This will take time and cause some issues, as all our official texts are currently in German or Baltic languages, and a majority of our population is still German or Baltic."
 BAT_RUS_INT4:0 "Begin Full Integration"
 BAT_RUS_INT4_desc:0 "Russians gain more and more influence over us every day. It seems that soon we will be integrated into their empire. We should send a delegation to their government to negotiate terms and ensure our autonomy is respected, at least for now."
 BAT_RUS_INT5:0 "End of Pribaltika"
-BAT_RUS_INT5_desc:0 "We have been ruled by the Russians for a long time. The very existence of our Baltic country no longer makes any sense. We will send another delegation to Russia to push for the annexation of our country and join our Russian brothers!."
+BAT_RUS_INT5_desc:0 "We have been ruled by the Russians for a long time. The very existence of our Baltic country no longer makes any sense. We will send another delegation to Russia to push for the annexation of our country and join our Russian brothers!"
 BAT_Army_Mil_Navy1:0 "Baltic Fleet"
 BAT_Army_Mil_Navy1_desc:0 "Since Peter the Great, many naval battles have been fought in the Baltic Sea. We are proud of the prestige and legacy of our navy and we will focus on improving our ships even more."
 BAT_Army_Mil_Navy_Old:0 "Naval Traditions"
